--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,5 +1,5 @@
 imports:
-    - { resource: parameters.yml }
+    - { resource: params.yml }
     - { resource: security.yml }
     - { resource: services.yml }
 
@@ -88,6 +88,8 @@ hwi_oauth:
     connect:
         confirmation: true
         registration_form: fos_user.registration.form.factory
+        registration_form_handler: app.registration.form.handler
+        account_connector: app.userprovider
     firewall_names: [main]
     fosub:
         username_iterations: 30
