--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -11,6 +11,7 @@ security:
         fos_userbundle:
             id: fos_user.user_provider.username
 
+
     firewalls:
         main:
             pattern: ^/
@@ -25,7 +26,7 @@ security:
                 failure_path: /connect
 
                 oauth_user_provider:
-                    service: hwi_oauth.user.provider.fosub_bridge
+                    service: app.userprovider
 
             logout:       true
             anonymous:    true
