--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "php": ">=5.5.9",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
+        "facebook/graph-sdk": "^5.6",
         "friendsofsymfony/comment-bundle": "^2.0",
         "friendsofsymfony/user-bundle": "~2.0",
         "hwi/oauth-bundle": "0.5.3",
